<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#E4E8DB"
    android:backgroundTint="#FBFBFB"
    tools:context=".fragment.CreateAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2mm">

    <EditText
        android:id="@+id/editFirstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:ems="10"
        android:hint="@string/First_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editLastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editLastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:ems="10"
        android:hint="@string/Last_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstname" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:drawableEnd="@android:drawable/ic_menu_my_calendar"
        android:ems="10"
        android:hint="@string/Date_of_birth"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editMunicipality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLastname" />

    <EditText
        android:id="@+id/editMunicipality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/Municipality"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editPostalcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editPostalcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:hint="@string/Postal_code"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editStreet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMunicipality" />

    <EditText
        android:id="@+id/editStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:hint="@string/Street"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPostalcode" />

    <EditText
        android:id="@+id/editHouse"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="15dp"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:ems="10"
        android:hint="@string/house_number"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editCreateUsername"
        app:layout_constraintEnd_toStartOf="@+id/editBox"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStreet"
        app:layout_constraintVertical_bias="0.517" />

    <EditText
        android:id="@+id/editBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/box"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editCreateUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editHouse"
        app:layout_constraintTop_toBottomOf="@+id/editStreet"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editCreateUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editCreatePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBox" />

    <EditText
        android:id="@+id/editCreatePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCreateUsername" />

    <CheckBox
        android:id="@+id/radioButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCreatePassword" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"
            android:background="@color/black"
            android:text="@string/CreateAccount"
            android:textAlignment="center"
            android:textColor="#FDFDFD"
            android:textColorLink="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <TextView
        android:id="@+id/tosTextView"
        android:layout_width="286dp"
        android:layout_height="21dp"
        android:layout_marginStart="46dp"
        android:text="@string/hyperlink"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/editCreatePassword"
        app:layout_constraintVertical_bias="0.506" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>