<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2mm"
    android:fitsSystemWindows="true"
    tools:context=".fragment.LoginFragment">

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="0"
        android:hint="Username"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/Login"
        android:textColor="#F6F4F4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accountButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="10dp"
        android:text="@string/CreateAccount"
        android:textColor="#F6F4F4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="275dp"
        android:layout_height="38dp"
        android:layout_margin="2mm"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:text="@string/ElectroMan"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/editUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>